add categories to posts

--- a/_posts/2017-01-20-gamejam.md
+++ b/_posts/2017-01-20-gamejam.md
@@ -2,6 +2,7 @@
 layout: event
 title: Game Jam
 date: 2017-01-20
+categories: [event]
 ---
 
 <iframe src="https://gamejam.evenea.pl?out=1&source=event_iframe" width="100%" scrolling="no" style="border: 0;"></iframe>
