--- a/_posts/2020-02-10-iot-na-ikm.md
+++ b/_posts/2020-02-10-iot-na-ikm.md
@@ -4,6 +4,7 @@ banner: /assets/images/iot-na-ikm/ikm-otwarty.png
 title: Własny inteligentny dom – warsztaty dla początkujących
 date: 2020-10-02
 permalink: /iot-na-ikm/
+categories: [event]
 ---
 
 ### Zapisy
