--- a/_posts/2017-01-20-gamejam.md
+++ b/_posts/2017-01-20-gamejam.md
@@ -5,11 +5,8 @@ date: 2017-01-20
 categories: [event]
 ---
 
-<iframe src="https://gamejam.evenea.pl?out=1&source=event_iframe" width="100%" scrolling="no" style="border: 0;"></iframe>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="//cdn.evenea.pl/js/iframe/new/iframeResizer2.js"></script>
 
-<p>Jeśli nie widzisz zapisów <a href="http://gamejam.evenea.pl/">kliknij tu </a></p>
+<p>Zapisy <a href="http://gamejam.evenea.pl/">tutaj</a></p>
 
 <h2>Hackerspace Game Jam</h2>
 <!-- <p class="contact-p">ul.Lęborska 3b, 4 piętro, 80-386 Gdańsk</p>
