add and configure 'redirect-from' plugin

--- a/_posts/2020-10-02-iot-na-ikm.md
+++ b/_posts/2020-10-02-iot-na-ikm.md
@@ -3,7 +3,7 @@ layout: post
 banner: /assets/images/iot-na-ikm/ikm-otwarty.png
 title: Własny inteligentny dom – warsztaty dla początkujących
 date: 2020-10-02
-permalink: /iot-na-ikm/
+redirect-from: /iot-na-ikm
 categories: [event]
 ---
 
