pin posts to homepage; pin IKM

--- a/_posts/2020-02-10-iot-ikm.md
+++ b/_posts/2020-02-10-iot-ikm.md
@@ -5,11 +5,11 @@ title: Własny inteligentny dom – warsztaty dla początkujących
 date: 2020-02-10
 redirect_from: /iot-na-ikm
 categories: [event]
+
+pinned: true
 ---
 
-### Zapisy
-
-Strona z zapisami zostanie uruchomiona dwa tygodnie prrzed warsztatami. Link do tej strony pojawi się w tym miejscu.
+Zapraszamy na warsztaty z budowy "Internetowych Wihajstrów", czyli wszelkich urządzeń z dziedziny "Internet of Things".
 
 ### Podstawowe informacje
 
