--- a/_posts/2020-02-10-iot-ikm.md
+++ b/_posts/2020-02-10-iot-ikm.md
@@ -1,15 +1,15 @@
 ---
-layout: page
+layout: post
+banner: /assets/images/iot-na-ikm/ikm-otwarty.png
 title: Własny inteligentny dom – warsztaty dla początkujących
-permalink: /iot-na-ikm/
-menus: header
+date: 2020-02-10
+redirect_from: /iot-na-ikm
+categories: [event]
+
+pinned: true
 ---
 
-![Logo otwarty IKM](/assets/images/iot-na-ikm/ikm-otwarty.png)
-
-### Zapisy
-
-Strona z zapisami zostanie uruchomiona dwa tygodnie prrzed warsztatami. Link do tej strony pojawi się w tym miejscu.
+Zapraszamy na warsztaty z budowy "Internetowych Wihajstrów", czyli wszelkich urządzeń z dziedziny "Internet of Things".
 
 ### Podstawowe informacje
 
