convert all posts to kramdown

--- a/_posts/2020-02-10-iot-ikm.md
+++ b/_posts/2020-02-10-iot-ikm.md
@@ -14,7 +14,7 @@ Zapraszamy na warsztaty z budowy "Internetowych Wihajstrów", czyli wszelkich ur
 ### Podstawowe informacje
 
 1. Termin: ~~30 marca, 17.30~~ przeniesione na 2 października, 17.30
-2. Miejsce: [Instytut Kultury Miejskiej, ul. Długi Targ 39/40, 80-830 Gdańsk](https://www.openstreetmap.org/node/6739857257)
+2. Miejsce: [Instytut Kultury Miejskiej, ul. Długi Targ 39/40, 80-830 Gdańsk](https://www.openstreetmap.org/node/6739857257){:target="_blank"}
 3. Typ wydarzenia: warsztaty
 4. Liczba miejsc: 16
 5. wydarzenie realizowane i dofinansowane w ramach programu Otwarty IKM
